--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   carousel_slider: 4.2.0
   flutter_launcher_icons: ^0.14.3
   font_awesome_flutter: ^10.7.0
-  url_launcher: ^6.2.1
+  url_launcher: ^6.1.10
   intl: ^0.18.1
   confetti: ^0.7.0
   webview_flutter: ^4.7.0 
@@ -31,7 +31,7 @@ dependencies:
   printing: ^5.12.0
   awesome_dialog: ^3.0.2
   google_fonts: ^4.0.4 
-
+  pdfx: ^2.0.3
 
 
 
@@ -57,6 +57,9 @@ flutter:
     - assets/logo.ico
     - assets/logo_11zon.png
     - assets/images/card_template.jpeg
+    - assets/images/nanesh-chiktsalay.jpg
+    - assets/images/daanpeti-logo.jpg
+    - assets/images/idam_namam.jpg
 
 # ✅ Splash Screen Configuration
 flutter_native_splash:
