--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   shared_preferences: ^2.2.2
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.6  
-  carousel_slider: 4.2.0
+  carousel_slider: ^5.0.0
   flutter_launcher_icons: ^0.14.3
   font_awesome_flutter: ^10.7.0
   url_launcher: ^6.1.10
@@ -32,7 +32,7 @@ dependencies:
   awesome_dialog: ^3.0.2
   google_fonts: ^4.0.4 
   pdfx: ^2.0.3
-  
+  flutter_linkify: ^6.0.0
 
 
 dev_dependencies:
