--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -41,7 +41,24 @@
             </intent-filter>
         </activity>
 
+        <!-- Flutter embedding -->
         <meta-data android:name="flutterEmbedding" android:value="2" />
+
+        <!-- ✅ Firebase Notifications Default Icon -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_notification" />
+
+      
+        <!-- ✅ Firebase Messaging Service -->
+        <service
+            android:name="io.flutter.plugins.firebase.messaging.FlutterFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
     <!-- Queries for url_launcher on Android 11+ -->
