--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_messaging: ^15.1.3
   flutter_local_notifications: ^17.2.1
   package_info_plus: ^8.0.2
+  cached_network_image: ^3.2.3
   
 
 
