--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/images/mslogo.png
     - assets/images/yuva.png
     - assets/images/vihar_seva.jpg
+    - assets/images/spf.jpg
     - assets/logo.png
     - assets/logo.ico
     - assets/logo_11zon.png
